[package]
name = "p2ptun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
once_cell = "1"
bytes = "1"
pub-sub = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tun = {version = "0.6", features = ["async"]}
anyhow = "1"
iroh-net = { version = "0.6", default-features = false }
