[package]
name = "p2ptun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
tun = { version = "0.6", features = ["async"] }
anyhow = "1"
quinn = "0.10"
iroh-net = { version = "0.9", default-features = false }
rustls = "0.21"
