[package]
name = "p2ptun"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
interprocess = { version = "2.0.0", features = ["tokio"] }
iroh-base = "0.15"
iroh-net = "0.15"
quinn = "0.10.2"
tun = { version = "0.6.1", features = ["async"] }

[dependencies.tokio]
version = "1.37.0"
features = ["rt-multi-thread", "sync", "signal", "time", "macros", "io-util"]
